- Removed unnecessary code, that was affecting the slidePanel toggle Button, no longer in use - Added a CSS important to enforce correct clpWrapper resizing when screen changes dimensions and selection pane is visible

--- a/static/custom/css/clpCSS.css
+++ b/static/custom/css/clpCSS.css
@@ -524,7 +524,7 @@ body{
 
 @media screen and (max-width:768px){
     .clpWrapper{
-        padding-left:0px;
+        padding-left:0px !important;
     }
 
     .selectionPane {
